--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <main>
         <p>This is the Main Character.</p>
         <p>I gathered some of my friends and searched for his name. We wanted his name to be unique and simple.</p>
+        <p>The name of the species that you see here is, Flork. And Dork represents a smart Flork.</p>
+        <p>Dork is a small nerd who is innocent in the start of the story
+        and he becomes powerful as the story continues. He ain't got any superpowers too.</p>
 
     </main>
 
